--- a/Proyecto con puntos de corte/cursos.css
+++ b/Proyecto con puntos de corte/cursos.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #222831;
 }
@@ -93,17 +97,18 @@ nav a {
     font-size: 4vw;
 }
 
-.containerintro button {
+.containerintro a {
     font-family: 'Wix Madefor Display', sans-serif;
-    background-color: rebeccapurple;
-    color: #dddddd;
-    font-size: 2vw;
+    background-color: #171717;
+    font-size: 2.5vw;
     font-weight: bold;
-    padding: 10px;
-    width: 20%;
-    max-width: 400px;
-    border-style: none;
-    border-radius: 10px;
+    color: #dddddd;
+    text-decoration: none;
+    padding: 1vw;
+    width: 20vw;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.3);
 }
 
 .containercursos {
@@ -127,19 +132,26 @@ nav a {
     justify-content: space-around;
     border-radius: 10px;
     max-width: 600px;
+    box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.5);
 }
 
-.curso button {
+.curso a {
     font-family: 'Wix Madefor Display', sans-serif;
+    background-color: #dddddd;
+    text-decoration: none;
+    text-align: center;
+    color: #171717;
     padding: 10px;
     font-size: 18px;
     font-weight: bold;
     border-radius: 5px;
     border-style: none;
-    transition: 0.3s
+    transition: 0.3s;
+    width: 100%;
+    box-shadow: 0px 0px 2px 1px rgba(255, 255, 255, 0.5);
 }
 
-.curso button:hover {
+.curso a:hover {
     background-color: black;
     color: #dddddd;
 }
@@ -185,6 +197,7 @@ nav a {
     color: #dddddd;
     font-family: 'Wix Madefor Display', sans-serif;
     border-radius: 10px;
+    box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.5);
 }
 
 .listaimagen ul {
@@ -280,6 +293,10 @@ nav a {
 
     .image3 {
         background-image: url(imagenes/integral.png);
+    }
+
+    .test h2 {
+        font-size: 3vw;
     }
 }
 
